--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-SPOONACULAR_API_KEY = "491096292b81443e9868be19fe0f2dc9"
+SPOONACULAR_API_KEY = "41b9ae31cfb44149bc461ba57a14d258"
+COHERE_API_KEY = kTjsPLjWuZVb5zY6J75fCX7aCHv1fNF23lxVqTnm
